# simpleupnp

./: .gitignore  CMakeLists.txt  README.md
src/: a.out  connection-manager-scpd.xml  content-directory-scpd.xml  desc.xml  main.cc  ms-media-registrar-scpd.xml
src/helpers/: encode_file_path.cc  encode_file_path.h  escape_xml.cc  escape_xml.h  global.cc  global.h  ipv4_address.cc  ipv4_address.h  logger.cc  logger.h  uuid_generator.cc  uuid_generator.h
src/includes/: HTTPServer.h  SSDPServer.h  include.hpp
src/server/: ConnectionManager.cc  ConnectionManager.h  ContentDirectory.cc  ContentDirectory.h  HTTPServer.cc  HTTPServer.h  SSDPServer.cc  SSDPServer.h  UPNPDevice.cc  a.out
